<resources>
    <!-- Manifest -->
    <string name="app_name">Evann DB.</string>

    <!-- Login -->
    <string name="button">connexion</string>
    <string name="connexion">Connexion</string>
    <string name="password">mot de passe</string>
    <string name="loginUser">identifiant</string>
    <string name="invalid">Identifiant/Mot de passe Invalide</string>


    <!-- Home -->
    <string name="logo">logo_isen</string>
    <string name="welcome">Bonjour!</string>
    <string name="desSave">Sauvegarde</string>
    <string name="desPerm">Permissions</string>
    <string name="desCycle">Cycle de vie</string>
    <string name="desWeb">Web</string>
    <string name="logout">Déconnexion</string>

    <!-- Life Cycle -->
    <string name="textFrag1">Fragement 1</string>
    <string name="textFrag2">Fragement 2</string>
    <string name="buttonFrag">Changer</string>

    <!-- Form -->
    <string name="form_alert">Données</string>
    <string name="nameForm">Prénom</string>
    <string name="surnameForm">Nom</string>
    <string name="readForm">Lire</string>
    <string name="saveForm">Sauvegarder</string>
    <string name="changeDateForm">Changer la date</string>
    <string name="titleForm">Formulaire</string>
    <string name="dataSave">Données sauvegardé</string>

    <!-- Perm -->
    <string name="titlePerm">Accès aux informations Android</string>
    <string name="textLongitude">Longitude:</string>
    <string name="textLatitude">Latitude:</string>
    <string name="nomContact">Nom:</string>

    <!-- Web -->
    <string name="titleWebActivity">Utilisateurs Aléatoire</string>
    <string name="buttonGenerate">Génerer</string>
    <string name="text">Text</string>
    <string name="permissionDenied">Permission refusée</string>
    <string name="onCreate">onCreate</string>

</resources>
